Fixes subsite headers and some layout issues

--- a/docroot/sites/all/themes/open_frame/scss/components/_people-link.scss
+++ b/docroot/sites/all/themes/open_frame/scss/components/_people-link.scss
@@ -37,6 +37,7 @@
       .field-name-field-year-as-text {
         order: 3;
         padding: 0 $half-space $space;
+        font-size: 16px;
       }
     }
   }
