--- a/docroot/sites/all/themes/open_frame/scss/components/_subsite_header.scss
+++ b/docroot/sites/all/themes/open_frame/scss/components/_subsite_header.scss
@@ -64,7 +64,7 @@
       @include large {
         flex-direction: row;
         justify-content: space-between;
-        align-items: end;
+        align-items: flex-end;
       }
 
       .subsite-header {
@@ -128,6 +128,8 @@
   ul.menu {
     @include inline-block-list;
 
+    padding-left: $double-space;
+
     .wrapped & {
       margin: 0;
       padding: .5em 0;
@@ -138,6 +140,10 @@
     background: none;
     padding: 0;
     margin-right: 1.5rem;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 
   a {
